--- a/HotelService/HotelService/HotelService.csproj
+++ b/HotelService/HotelService/HotelService.csproj
@@ -122,12 +122,18 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MailHandler\MailerClass.cs" />
     <Compile Include="Models\Boeking.cs" />
     <Compile Include="Models\Gast.cs" />
     <Compile Include="Models\Gebruiker.cs" />
     <Compile Include="Models\Kamer.cs" />
     <Compile Include="Models\SingletonDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -181,6 +187,10 @@
     <Content Include="Views\Boeking\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Views\Boeking\Delete.cshtml" />
     <Content Include="Views\Gast\Create.cshtml" />
     <Content Include="Views\Gast\Delete.cshtml" />
