--- a/HotelService/HotelService/HotelService.csproj
+++ b/HotelService/HotelService/HotelService.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Boeking\KlantBoekingOverzicht.cshtml" />
     <Content Include="Views\Kamer\KlantKamerOverzicht.cshtml" />
     <Content Include="Views\Gast\Created.cshtml" />
+    <Content Include="Views\Kamer\Created.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
