--- a/HotelService/HotelService/HotelService.csproj
+++ b/HotelService/HotelService/HotelService.csproj
@@ -206,6 +206,7 @@
     <Content Include="Views\Kamer\KlantKamerOverzicht.cshtml" />
     <Content Include="Views\Gast\Created.cshtml" />
     <Content Include="Views\Kamer\Created.cshtml" />
+    <Content Include="Views\Boeking\Deleted.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
