Klantenfixes en nieuwe databasecontext wegens kleine change ivm snelheid

--- a/HotelService/HotelService/Web.config
+++ b/HotelService/HotelService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -41,7 +41,10 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="PROG6ASPNETEntities" connectionString="metadata=res://*/Database.HotelServiceModel.csdl|res://*/Database.HotelServiceModel.ssdl|res://*/Database.HotelServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=server2.def-tech.nl;initial catalog=PROG6ASPNET;user id=PROG6ASPNET;password=qwerty;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PROG6ASPNETEntities" connectionString="metadata=res://*/Database.HotelServiceModel.csdl|res://*/Database.HotelServiceModel.ssdl|res://*/Database.HotelServiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=server2.def-tech.nl;initial catalog=PROG6ASPNET;user id=PROG6ASPNET;password=qwerty;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="PROG6ASPNETConnectionString" connectionString="Data Source=server2.def-tech.nl;Initial Catalog=PROG6ASPNET;User ID=PROG6ASPNET;Password=qwerty;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
