--- a/HotelService/HotelService/HotelService.csproj
+++ b/HotelService/HotelService/HotelService.csproj
@@ -114,7 +114,7 @@
   <ItemGroup>
     <Compile Include="Controllers\BoekingController.cs" />
     <Compile Include="Controllers\GastController.cs" />
-    <Compile Include="Controllers\GebruikerController.cs" />
+    <Compile Include="Controllers\KlantController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KamerController.cs" />
     <Compile Include="Filters\KlantFilter.cs" />
@@ -124,10 +124,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="MailHandler\MailerClass.cs" />
-    <Compile Include="Models\Boeking.cs" />
-    <Compile Include="Models\Gast.cs" />
-    <Compile Include="Models\Gebruiker.cs" />
-    <Compile Include="Models\Kamer.cs" />
+    <Compile Include="Models\KlantGebruikerComposite.cs" />
     <Compile Include="Models\SingletonDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -173,6 +170,7 @@
     <Content Include="Views\Gast\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
@@ -211,8 +209,8 @@
     <Content Include="Views\Boeking\Deleted.cshtml" />
     <Content Include="Views\Gast\Deleted.cshtml" />
     <Content Include="Views\Kamer\Deleted.cshtml" />
-    <Content Include="Views\Gebruiker\Create.cshtml" />
-    <Content Include="Views\Gebruiker\Created.cshtml" />
+    <Content Include="Views\Klant\Create.cshtml" />
+    <Content Include="Views\Klant\Created.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
