--- a/HotelService/HotelService/Web.config
+++ b/HotelService/HotelService/Web.config
@@ -56,4 +56,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IValutaService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:51100/ValutaService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IValutaService"
+        contract="ValutaServiceReference.IValutaService" name="BasicHttpBinding_IValutaService" />
+    </client>
+  </system.serviceModel>
 </configuration>
